# spec2testbench

./: .gitignore  README.md  pyproject.toml
docs/: project_overview.md
examples/01_diff_pair_ota/: dut.cir  testbench.cir  trace.md
src/spec2testbench/: __init__.py  evaluate.py  extract.py  ir.py
src/spec2testbench/benchmark/: README.md  __init__.py  cases.py  runner.py
src/spec2testbench/benchmark/results/: 2026-05-15T16-58-37_openai-compatible.json  2026-05-15T16-58-37_openai-compatible.txt  2026-05-15T18-04-03_openai-compatible.json  2026-05-15T18-04-03_openai-compatible.txt  2026-05-15T18-11-46_openai-compatible.json  2026-05-15T18-11-46_openai-compatible.txt  2026-05-15T18-18-09_openai-compatible.json  2026-05-15T18-18-09_openai-compatible.txt  2026-05-15T18-25-11_openai-compatible.json  2026-05-15T18-25-11_openai-compatible.txt
tests/: conftest.py  test_benchmark_cases.py  test_extract_live.py  test_extract_unwrap.py  test_ir_diff_pair_ota.py  test_ir_equivalence.py  test_ir_evaluator_hardening.py  test_ir_extended_primitives.py
