[project]
name = "spec2testbench"
version = "0.1.0"
description = "Natural-language analog spec → executable testbench pipeline (v0: spec → TestPlan IR)."
authors = [
    { name = "Eulerone", email = "yihan-wa23@mails.tsinghua.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.7",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
